--- a/gradle.properties
+++ b/gradle.properties
@@ -28,10 +28,10 @@ loader_version_range=[47,)
 #
 # Parchment is an unofficial project maintained by ParchmentMC, separate from Minecraft Forge.
 # Additional setup is needed to use their mappings, see https://parchmentmc.org/docs/getting-started
-mapping_channel=official
+mapping_channel=parchment
 # The mapping version to query from the mapping channel.
 # This must match the format required by the mapping channel.
-mapping_version=1.20.1
+mapping_version=2023.06.26-1.20.1
 
 
 # The unique mod identifier for the mod. Must be lowercase in English locale. Must fit the regex [a-z][a-z0-9_]{1,63}
@@ -48,6 +48,6 @@ mod_version=1.0-SNAPSHOT
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
 mod_group_id=com.v
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
-mod_authors=
+mod_authors=v
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=
+mod_description=something for study
